cp uim-vi-1.8 commit #34556cf Clean up some non-vi modules/language supports
Conflict resolved:
+ po/LINGUAS: remain LINGUAS content on master branch, see #d363a36 for
more details.
+ scm/Makefile.am: clean up some non-vi modules/language we don't use
any more. Remain changes on uim-vi-1.8 for this file.

--- a/tables/Makefile.am
+++ b/tables/Makefile.am
@@ -1,7 +1,7 @@
 tablesdir = $(pkgdatadir)/tables
 
-SCMS = wb86.scm zm.scm
-SCM_TABLES = wb86.table zm.table
+SCMS =
+SCM_TABLES =
 
 NATIVE_TABLES = 
 
