--- a/pixmaps/Makefile.am
+++ b/pixmaps/Makefile.am
@@ -9,113 +9,44 @@ SVGS = unknown.svg
 SVGS += unknown_dark_background.svg
 
 # input methods
-SVGS += direct.svg skk.svg tcode.svg tutcode.svg byeoru.svg wb86.svg zm.svg
+SVGS += direct.svg
 # dark background
-SVGS += direct_dark_background.svg \
-        skk_dark_background.svg \
-        tcode_dark_background.svg \
-        tutcode_dark_background.svg \
-        wb86_dark_background.svg zm_dark_background.svg
+SVGS += direct_dark_background.svg
 
 # input modes
-SVGS += direct_input.svg on.svg off.svg \
-        ja_direct.svg ja_hiragana.svg ja_katakana.svg \
-        ja_halfkana.svg \
-        ja_halfwidth_alnum.svg ja_fullwidth_alnum.svg \
-        prime_mode_application.svg \
-        ko_direct.svg ko_hangulchar.svg ko_hangulword.svg
+SVGS += direct_input.svg on.svg off.svg
+
 # dark background
 SVGS += direct_input_dark_background.svg \
         on_dark_background.svg \
-        off_dark_background.svg \
-        ja_direct_dark_background.svg \
-        ja_hiragana_dark_background.svg \
-        ja_katakana_dark_background.svg \
-        ja_halfkana_dark_background.svg \
-        ja_halfwidth_alnum_dark_background.svg \
-        ja_fullwidth_alnum_dark_background.svg \
-        prime_mode_application_dark_background.svg \
-        ko_direct_dark_background.svg \
-        ko_hangulchar_dark_background.svg \
-        ko_hangulword_dark_background.svg
-
-# Japanese kana input methods
-SVGS += ja_romaji.svg ja_kana.svg ja_azik.svg ja_act.svg ja_kzik.svg \
-        ja_nicola.svg ja_pocketbell.svg
-# dark background
-SVGS += ja_romaji_dark_background.svg \
-        ja_kana_dark_background.svg \
-        ja_azik_dark_background.svg \
-        ja_act_dark_background.svg \
-        ja_kzik_dark_background.svg
+        off_dark_background.svg
 
 # Tools
 SVGS += im_switcher.svg uim-dict.svg
 
 # input method substitutions
-IM_SUBST_SVGS = py.svg pyunihan.svg pinyin-big5.svg \
-                mana.svg \
-                hangul2.svg hangul3.svg romaja.svg \
-                viqr.svg ipa-x-sampa.svg latin.svg elatin.svg \
-                look.svg scim.svg sj3.svg wnn.svg \
-                social-ime.svg ajax-ime.svg yahoo-jp.svg \
-                google-cgiapi-jp.svg baidu-olime-jp.svg
-GENERATED_SVGS = $(IM_SUBST_SVGS) trycode.svg trycode_dark_background.svg
+IM_SUBST_SVGS = viqr.svg ipa-x-sampa.svg scim.svg
+
+GENERATED_SVGS = $(IM_SUBST_SVGS)
 SVGS += im_subst.svg $(GENERATED_SVGS)
 
-IM_SUBST_PNGS = py.png pyunihan.png pinyin-big5.png \
-                mana.png \
-                hangul2.png hangul3.png romaja.png \
-                viqr.png ipa-x-sampa.png latin.png elatin.png \
-                look.png scim.png sj3.png wnn.png \
-                social-ime.png ajax-ime.png yahoo-jp.png \
-                google-cgiapi-jp.png baidu-olime-jp.png
+IM_SUBST_PNGS = viqr.png ipa-x-sampa.png scim.png
 
 SVG_PNGS = unknown.png \
-           direct.png skk.png tcode.png tutcode.png trycode.png byeoru.png \
+           direct.png \
            direct_input.png on.png off.png \
-           ja_direct.png ja_hiragana.png ja_katakana.png \
-           ja_halfkana.png \
-           ja_halfwidth_alnum.png ja_fullwidth_alnum.png \
-           prime_mode_application.png \
-           ko_direct.png ko_hangulchar.png ko_hangulword.png \
-           ja_romaji.png ja_kana.png ja_azik.png ja_act.png ja_kzik.png \
-           ja_nicola.png \
-           ja_pocketbell.png \
-           wb86.png zm.png \
            im_switcher.png uim-dict.png $(IM_SUBST_PNGS) \
            unknown_dark_background.png \
            direct_dark_background.png \
-           skk_dark_background.png \
-           tcode_dark_background.png \
-           tutcode_dark_background.png \
-           trycode_dark_background.png \
-           wb86_dark_background.png \
-           zm_dark_background.png \
            direct_input_dark_background.png \
            on_dark_background.png \
-           off_dark_background.png \
-           ja_direct_dark_background.png \
-           ja_hiragana_dark_background.png \
-           ja_katakana_dark_background.png \
-           ja_halfkana_dark_background.png \
-           ja_halfwidth_alnum_dark_background.png \
-           ja_fullwidth_alnum_dark_background.png \
-           prime_mode_application_dark_background.png \
-           ko_direct_dark_background.png \
-           ko_hangulchar_dark_background.png \
-           ko_hangulword_dark_background.png \
-           ja_romaji_dark_background.png \
-           ja_kana_dark_background.png \
-           ja_azik_dark_background.png \
-           ja_act_dark_background.png \
-           ja_kzik_dark_background.png
+           off_dark_background.png
 
 NATIVE_PNGS = null.png uim-icon64.png uim-icon48.png uim-gray.png
 
-SCIM_PNGS = scim-anthy.png scim-canna.png scim-prime.png \
-	    scim-skk.png scim-wnn.png
-SCIM_ORIGINATED_PNGS = anthy.png canna.png prime.png
+SCIM_PNGS =
+
+SCIM_ORIGINATED_PNGS =
 if ANTHY_UTF8
 SCIM_ORIGINATED_PNGS += anthy-utf8.png
 endif
