+ IPA support xtelex-ipa, xvni-ipa

--- a/pixmaps/Makefile.am
+++ b/pixmaps/Makefile.am
@@ -25,12 +25,14 @@ SVGS += direct_input_dark_background.svg \
 SVGS += im_switcher.svg uim-dict.svg
 
 # input method substitutions
-IM_SUBST_SVGS = xvni.svg xtelex.svg viqr.svg ipa-x-sampa.svg scim.svg
+IM_SUBST_SVGS = xvni.svg xtelex.svg viqr.svg ipa-x-sampa.svg scim.svg \
+	xvni-ipa.svg xtelex-ipa.svg
 
 GENERATED_SVGS = $(IM_SUBST_SVGS)
 SVGS += im_subst.svg $(GENERATED_SVGS)
 
-IM_SUBST_PNGS = xvni.png xtelex.png viqr.png ipa-x-sampa.png scim.png
+IM_SUBST_PNGS = xvni.png xtelex.png viqr.png ipa-x-sampa.png scim.png \
+	xvni-ipa.png xtelex-ipa.png
 
 SVG_PNGS = unknown.png \
            direct.png \
