Define #QT{4,5}_CANDIN when #qt{4,5} is enabled

--- a/configure.ac
+++ b/configure.ac
@@ -313,18 +313,18 @@ if test x"$have_x" != xdisabled && test x"$have_x" != xno; then
     CFLAGS="$CFLAGS $XFT_CFLAGS"
     LIBS="$LIBS $XFT_LIBS"
     AC_TRY_LINK([
-#include <X11/Xft/Xft.h>], [ XftFontClose(0, 0); return 1; ], 
+#include <X11/Xft/Xft.h>], [ XftFontClose(0, 0); return 1; ],
       [
         AC_DEFINE(WITH_XFT, 1, [font antialiasing support])
         AC_MSG_CHECKING([Xft UTF-8 support])
         AC_TRY_LINK([
 #include <X11/Xft/Xft.h>
-          ], [ 
-XftDrawStringUtf8(0, 0, 0, 0, 0, 0, 0); return 0; 
+          ], [
+XftDrawStringUtf8(0, 0, 0, 0, 0, 0, 0); return 0;
           ],
             AC_DEFINE(HAVE_XFT_UTF8_STRING, 1, "Xft UTF8 support")
             AC_MSG_RESULT(yes),
-            AC_MSG_RESULT(no)) 
+            AC_MSG_RESULT(no))
       ],
       [
         AC_MSG_RESULT([***Could not link with Xft. Install Xft if you want support for it***])
@@ -628,7 +628,7 @@ fi
 AC_MSG_CHECKING([whether snprintf can declare const char *fmt])
 AC_COMPILE_IFELSE([AC_LANG_SOURCE([[#include <stdio.h>
 	   int snprintf(char *a, size_t b, const char *c, ...) { return 0; }
-	   int main(void) { snprintf(0, 0, 0); } 
+	   int main(void) { snprintf(0, 0, 0); }
     ]])],
    [AC_MSG_RESULT(yes)
     AC_DEFINE(SNPRINTF_CONST, [const],
@@ -1827,6 +1827,9 @@ if test "x$with_qt4" = xyes; then
   if test "x$with_qt4_immodule" = xyes; then
     qt4_immodule_option="DEFINES+=QT4_IMMODULE"
   fi
+
+  qt4_immodule_option="${qt4_immodule_option} DEFINES+=QT4_CANDWIN"
+
   # Generate Makefiles for Qt4 by qmake
   ${QMAKE4} -o ${ac_abs_top_builddir}/qt4/candwin/Makefile.qmake \
     ${ac_abs_top_builddir}/qt4/candwin/uim-candwin-qt4.pro
@@ -1878,6 +1881,9 @@ if test "x$with_qt5" = xyes; then
   if test "x$with_qt5_immodule" = xyes; then
     qt5_immodule_option="DEFINES+=QT5_IMMODULE"
   fi
+
+  qt5_immodule_option="DEFINES+=QT5_CANDWIN"
+
   ${QMAKE5} -o ${ac_abs_top_builddir}/qt5/candwin/Makefile.qmake \
     ${ac_abs_top_builddir}/qt5/candwin/uim-candwin-qt5.pro
   ${QMAKE5} -o ${ac_abs_top_builddir}/qt5/chardict/Makefile.qmake \
